Update leaderboard after every 5 mins

--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -2,7 +2,7 @@ name: Daily LeetCode Scrape
 
 on:
   schedule:
-    - cron: '0 0 * * *' # Runs every day at 00:00 UTC
+    - cron: '*/5 * * * *' # Runs every 5 minutes
   workflow_dispatch: # Allows you to run it manually from the Actions tab
 
 jobs:
