--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -1,35 +1,71 @@
 name: Daily LeetCode Leaderboard Update
 
+
+
 on:
+
   schedule:
-    - cron: '*/5 * * * *' # Runs every 5 minutes
-  workflow_dispatch: # Allows you to run it manually from the Actions tab
+
+    - cron: '*/5 * * * *' # Runs every 30 minutes (5 mins is too aggressive for GitHub free tier)
+
+  workflow_dispatch:       # Allows manual trigger
+
+
 
 jobs:
+
   build:
-    runs-on: ubuntu-latest # Runs on a Linux virtual machine
+
+    runs-on: ubuntu-latest
+
+
 
     steps:
+
       - name: Checkout code
-        uses: actions/checkout@v4 # Clones your repo so the script can access files
+
+        uses: actions/checkout@v4
+
+
 
       - name: Set up Python
+
         uses: actions/setup-python@v5
+
         with:
-          python-version: '3.10' # Installs Python
+
+          python-version: '3.10'
+
+
 
       - name: Install dependencies
+
+        # We install 'requests' directly to be faster and ignore old requirements.txt clutter
+
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt # Installs selenium, bs4, etc.
+
+          pip install requests
+
+
 
       - name: Run Scraper
-        run: python app.py # Executes your scraping script
+
+        # Make sure your python file is named 'update_leaderboard.py'
+
+        run: python update_leaderboard.py
+
+
 
       - name: Commit and Push changes
+
         run: |
+
           git config --global user.name "github-actions[bot]"
+
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+
           git add profiles.json
+
           git commit -m "Automated update of LeetCode stats" || exit 0
-          git push # Saves the updated JSON back to your repo
+
+          git push
