--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "all": "^0.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.13.0",
     "recharts": "^3.6.0"
   },
   "devDependencies": {
